# Modern Python packaging configuration for RNV Color Picker.
#
# This file enables:
#   pip install .            (production install)
#   pip install -e .         (editable / development install)
#   pip install ".[dev]"     (install with test/dev dependencies)
#
# It supplements (does not replace) the existing Visual Studio
# `RNV_Color_Picker.pyproj` file.

[build-system]
requires = ["setuptools>=68.0", "wheel"]
build-backend = "setuptools.build_meta"


[project]
name = "rnv-color-picker"
version = "3.0.3"
description = "Professional color extraction and palette management — PyQt6 desktop application"
readme = "README.md"
license = { file = "LICENSE" }
requires-python = ">=3.13"
authors = [
    { name = "RNV" },
]
keywords = [
    "color",
    "palette",
    "color-picker",
    "color-extraction",
    "pyqt6",
    "design-tools",
    "color-blindness",
    "wcag",
]
classifiers = [
    "Development Status :: 5 - Production/Stable",
    "Environment :: X11 Applications :: Qt",
    "Environment :: Win32 (MS Windows)",
    "Environment :: MacOS X",
    "Intended Audience :: End Users/Desktop",
    "Intended Audience :: Developers",
    "License :: OSI Approved :: MIT License",
    "Operating System :: OS Independent",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.13",
    "Topic :: Multimedia :: Graphics",
    "Topic :: Multimedia :: Graphics :: Editors",
    "Topic :: Software Development :: Libraries :: Python Modules",
    "Topic :: Utilities",
]

# Runtime dependencies — kept in sync with requirements.txt
dependencies = [
    "PyQt6==6.10.2",
    "Pillow>=10.0.0",
    "numpy>=1.26.0",
    "scikit-learn>=1.3.0",
]


[project.optional-dependencies]
# Test and development dependencies — kept in sync with requirements-test.txt
dev = [
    "pytest==9.0.2",
    "pytest-qt==4.5.0",
    "pytest-cov==7.1.0",
    "coverage>=7.0.0",
    "hypothesis==6.152.4",
]


[project.scripts]
# `rnv-color-picker` becomes available on PATH after install
rnv-color-picker = "RNV_Color_Picker:main"


[project.urls]
Homepage      = "https://github.com/RNVizion/rnv-color-picker"
Repository    = "https://github.com/RNVizion/rnv-color-picker"
Issues        = "https://github.com/RNVizion/rnv-color-picker/issues"
Changelog     = "https://github.com/RNVizion/rnv-color-picker/blob/main/CHANGELOG.md"
Documentation = "https://github.com/RNVizion/rnv-color-picker/blob/main/README.md"


# ---------------------------------------------------------------------------
# Setuptools-specific configuration
# ---------------------------------------------------------------------------

[tool.setuptools]
# Top-level packages and the standalone main module
packages = ["core", "ui", "utils"]
py-modules = ["RNV_Color_Picker"]

# Bundle resources (fonts, icons, backgrounds, screenshots) into the wheel
include-package-data = true


[tool.setuptools.package-data]
# Anything under resources/ travels with installs
"*" = [
    "resources/fonts/*",
    "resources/icons/*",
    "resources/button_images/*",
    "resources/background_images/*",
    "resources/screenshots/*",
]


# ---------------------------------------------------------------------------
# Tool configuration
# ---------------------------------------------------------------------------
# Note: pytest configuration lives in `pytest.ini` and is intentionally not
# duplicated here. Coverage configuration is declared below because it is
# not declared anywhere else in the project.

[tool.coverage.run]
source = ["core", "ui", "utils"]
branch = true
omit = [
    "*/tests/*",
    "*/__pycache__/*",
    "RNV_Color_Picker.py",
]

[tool.coverage.report]
# Lines that don't need to be reported as missing
exclude_lines = [
    "pragma: no cover",
    "raise NotImplementedError",
    "if __name__ == .__main__.:",
    "if TYPE_CHECKING:",
]
show_missing = true
skip_covered = false
precision = 0
